# latincy-ext

./: .gitignore  README.md  pyproject.toml
notebooks/: demo_macron_morph.ipynb  lila_lemmabank_linker_demo.ipynb
scripts/: demo_before_after.py
src/latincy_ext/: __init__.py  lila_linker.py  macron_morph.py  syllabifier.py  syllabify.py
tests/: test_lila_linker.py  test_macron_morph.py  test_sentences.py
