[project]
name = "latincy-ext"
version = "0.1.0"
description = "Experimental spaCy components for LatinCy pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "spacy>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latincy_ext"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "pytest>=9.0.3",
]
