[project]
name = "latincy-ext"
version = "0.1.0"
description = "Experimental spaCy components for LatinCy pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Patrick J. Burns", email = "patrick@diyclassics.org" },
]
keywords = ["latin", "spacy", "nlp", "latincy", "lila", "lemma-bank", "digital-humanities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "spacy>=3.7",
]

[project.urls]
Homepage = "https://github.com/latincy/latincy-ext"
Repository = "https://github.com/latincy/latincy-ext"
Issues = "https://github.com/latincy/latincy-ext/issues"

[project.entry-points.spacy_factories]
lila_linker = "latincy_ext.lila_linker"
macron_morph = "latincy_ext.macron_morph"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latincy_ext"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "pytest>=9.0.3",
]
